--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>T-Shirt combinator</title><script defer="defer" src="app.js"></script></head><body></body></html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>T-Shirt combinator</title><script defer="defer" src="app.js"></script></head><body><img src="./img/test.png" alt="test"/></body></html>
