--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>T-Shirt combinator</title><script defer="defer" src="app.js"></script></head><body><script src="./app.js"></script><canvas id="canvas" width="300" height="300"></canvas></body></html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>T-Shirt combinator</title><script defer="defer" src="app.js"></script></head><body><button id="add-text">Add text</button><canvas id="canvas" width="300" height="300"></canvas><div id="text-controllers"></div></body></html>
