--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>T-Shirt combinator</title><script defer="defer" src="app.js"></script></head><body><button id="add-text">Add text</button><canvas id="canvas" width="300" height="300"></canvas><div id="text-controllers"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>T-Shirt combinator</title><style>canvas {
+      border: 1px solid black;
+    }</style><script defer="defer" src="app.js"></script></head><body><button id="add-text">Add text</button><canvas id="canvas" width="300" height="300"></canvas><div id="text-controllers"></div></body></html>
