--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!doctype html><html lang="en"><head><meta charset="UTF-8"><title>T-Shirt combinator</title><style>canvas {
       border: 1px solid black;
-    }</style><script defer="defer" src="app.js"></script></head><body><button id="add-text">Add text</button> <button id="download-current-button">Download current version (t-shirt)</button><canvas id="canvas" width="450" height="540"></canvas><div id="text-controllers"></div></body></html>
+    }</style><script defer="defer" src="app.js"></script></head><body><button id="add-text">Add text</button> <button id="download-current-button">Download current version (t-shirt)</button> <button id="download-all-button">Download all variations (t-shirt)</button><canvas id="canvas" width="450" height="540"></canvas><div id="text-controllers"></div></body></html>
