--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
 <!doctype html><html lang="en"><head><meta charset="UTF-8"><title>T-Shirt combinator</title><style>canvas {
       border: 1px solid black;
-    }</style><script defer="defer" src="app.js"></script></head><body><p><button id="add-text">Add text</button> <label for="text-count">Text count:</label> <input type="number" id="text-count" value="3"/></p><button id="download-current-button">Download current version (t-shirt)</button> <button id="download-all-button">Download all variations (t-shirt)</button><canvas id="canvas" width="450" height="540"></canvas><div id="background-controller"><button id="add-background">Add background</button><button id="cycle-background">Cycle background</button></div><div id="text-controllers"></div></body></html>
+    }
+    .flex-container {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+    }
+    .text-variant-block {
+      display: flex;
+      flex-direction: column;
+    }
+    #text-controllers {
+      padding: 0.5em;
+    }
+    #background-controller {
+      padding: 0.5em;
+    }</style><script defer="defer" src="app.js"></script></head><body><div class="flex-container"><div id="text-controllers"></div><div><p><button id="add-text">Add text</button> <label for="text-count">Text count:</label> <input type="number" id="text-count" value="3"/></p><button id="download-current-button">Download current version (t-shirt)</button> <button id="download-all-button">Download all variations (t-shirt)</button><canvas id="canvas" width="450" height="540"></canvas></div><div id="background-controller"><button id="add-background">Add background</button><button id="cycle-background">Cycle background</button></div></div></body></html>
