--- a/angular/index.html
+++ b/angular/index.html
@@ -12,5 +12,5 @@
 </style><link rel="stylesheet" href="styles-Y4IFJ72L.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-Y4IFJ72L.css"></noscript></head>
 <body class="mat-typography">
   <app-root></app-root>
-<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-RV4TE6GU.js" type="module"></script></body>
+<script src="polyfills-LZBJRJJE.js" type="module"></script><script src="main-5Q4XTLOU.js" type="module"></script></body>
 </html>
